IH-98 Refactor code